--- a/shop-frontend/src/index.css
+++ b/shop-frontend/src/index.css
@@ -2,7 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, .App, #root {
+body {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
+.App, #root {
     margin: 0;
     padding: 0;
     width: 100%;
